--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,9 @@
-@font-face {
-  font-family: "trueno";
-  src: url("../fonts/TruenoBd.otf") format("truetype");
-  src: url("../fonts/TruenoBdIt.otf") format("truetype");
-  src: url("../fonts/TruenoBdOl.otf") format("truetype");
-  src: url("../fonts/TruenoBdOlIt.otf") format("truetype");
-  src: url("../fonts/TruenoExBd.otf") format("truetype");
+
+@font-face 
+{
+    font-family: 'Trueno';
+    /* src: url('../font/True/TruenoBd.otf') format('opentype'); */
+    src: url('../fonts/TruenoBd.otf') format('opentype');
 }
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 body {
@@ -13,11 +12,23 @@ body {
 
 
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:'trueno';
+}
+
+p{
+  font-family: 'poppins',sans-serif;
 }
 section {
   padding: 80px 0;
 }
+.title
+{
+    color:#151515;
+    font-size: 40px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+
 .button1 a {
   border-radius: 4px;
   background: #38dce2;
@@ -110,31 +121,43 @@ header.desktop-menu nav ul li a
 
 
 /* homebanner Section */
-section.homebanner-section {
+/* section.homebanner-section {
   position: relative;
   padding-bottom: 800px;
   width: 100%;
-  /* position: relative;
-    background: url(../images/homebanner/1.webp) no-repeat;
-    background-size: cover;
-    height: 800px; */
-    background: url(../images/homebanner/1.png) no-repeat;
+  background: rgba(0, 0, 0, 0.5);
     
 }
 
-
 section.homebanner-section:before {
   content: "";
+  background: url(../images/homebanner/1.png) no-repeat;
   position: absolute;
   left: 0;
   top: 10%;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+ 
   background-size: cover;
   
+} */
+section.homebanner-section
+{
+    position: relative;
+    background: url(../images/homebanner/1.png) no-repeat;
+    background-size: cover;
+    height: 800px;
 }
-
+section.homebanner-section:before
+{
+    content:'';
+    position: absolute;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    background:rgba(0,0,0,0.5);
+}
 .absolute-center {
   position: absolute;
   left: 50%;
@@ -148,20 +171,20 @@ section.homebanner-section .banner-details {
   position: relative;
 }
 
-section.homebanner-section .banner-details h2 {
-  font-size: 55px;
-  font-weight: 700;
-  color: #38dce2;
+section.homebanner-section .banner-details h1 {
+  font-size: 50px;
+ 
+  color: #38DCE2;
   font-family: "Trueno", sans-serif;
   text-transform: uppercase;
 }
 
 section.homebanner-section .banner-details p {
-  font-size: 24px;
-  font-weight: 400;
   color: #fff;
+  margin-bottom: 43px;
   font-family: "Poppins", sans-serif;
   text-align: start;
+  font-size: 1.1rem;
 }
 section.homebanner-section .button1 {
   margin-top: 20px;
@@ -211,6 +234,7 @@ padding: 30px;
 max-width: 450px;
 margin: auto;
 } */
+ 
 .form:before {
   content: "";
   position: absolute;
@@ -218,7 +242,7 @@ margin: auto;
   top: 50%;
   width: 91%;
   height: 80%;
-  background: linear-gradient(#ffffff66, #33333333);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.4) 40%, rgba(255, 255, 255, 0.4) 40%);
   transform: translate(-50%, -50%);
   border: 1px solid #38dce2;
   backdrop-filter: blur(10px);
@@ -246,7 +270,7 @@ margin: auto;
   font-family: "poppins", sans-serif;
 }
 
-.form form select {
+/* .form form select {
   font-weight: 600;
   padding: 12px 24px 11px;
   margin-bottom: 20px;
@@ -254,10 +278,49 @@ margin: auto;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
   background: #15151580;
   color: #fff;
-}
+} */
+
 
 .form .form-group {
   position: relative;
+}
+.form .form-group input:focus
+{
+    outline: none;
+    box-shadow: none;
+    background:#3b393b;
+}
+.form .form-group select
+{
+    height:50px;
+    background:#3b393b;
+    color:#fff !important;
+    border: none;
+    border-radius: 0px;
+    margin-bottom:20px;
+    font-family: "Poppins", sans-serif;
+    padding: 10px 16px;
+}
+.form .form-group select option
+{
+    text-transform: capitalize;
+}
+.form .form-group select:focus
+{
+    outline: none;
+    box-shadow: none;
+    background:#3b393b;
+    border: none;
+}
+.form .form-group select {
+  height: 50px;
+  background: #3b393b;
+  color: #fff !important;
+  border: none;
+  border-radius: 0px;
+  margin-bottom: 20px;
+  font-family: "Poppins", sans-serif;
+  padding: 10px 16px;
 }
 
 .form form i {
@@ -279,10 +342,10 @@ margin: auto;
 .form form input:focus,
 .form form select:focus,
 .form form textarea:focus {
-  border: 2px solid #646464;
+  border: none;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
   outline: none;
-  background: 0 0;
+  background: none;
 }
 
 .form form .form-control::placeholder,
@@ -293,7 +356,7 @@ margin: auto;
 
 /* Responsive Styles */
 @media (max-width: 480px) {
-  section.homebanner-section .banner-details h2 {
+  section.homebanner-section .banner-details h1 {
     font-size: 28px;
   }
 
@@ -339,18 +402,19 @@ margin: auto;
     
     margin-top: -40px;
  }
- section.homebanner-section .banner-details h2 {
+ section.homebanner-section .banner-details h1 {
   font-size: 36px;
   text-align: center;
 }
-}
- section.homebanner-section .button1 {
+section.homebanner-section .button1 {
   margin-top: 20px;
   display: flex
 ;
   justify-content: flex-start;
   text-align: left;
   margin-left: 37px;
+}
+
 }
 
 
@@ -392,7 +456,7 @@ margin: auto;
     transform: translateX(50%);
   }
 
-  section.homebanner-section .banner-details h2 {
+  section.homebanner-section .banner-details h1 {
     font-size: 36px;
     text-align: center;
   }
@@ -463,19 +527,15 @@ section.aboutus-section .aboutus-details p {
 }
 
 section.aboutus-section .aboutus-details .title {
-  font-size: 60px;
-  font-weight: 700;
-  color: #000;
-  text-transform: uppercase;
-  margin-bottom: 20px;
+  
   font-family: "Trueno", sans-serif;
 }
 
 .certifications p {
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Poppins", sans-serif;
-  font-weight: 100;
-  line-height: 1.5;
+  color: #000;
+ 
 }
 
 .certifications img {
@@ -656,7 +716,7 @@ section.homebanner-section .button1 {
 
 /* services */
 
-section.services {
+/* section.services {
   position: relative;
   width: 100%;
 }
@@ -670,15 +730,48 @@ section.services:before {
   background: url(../images/services/image.png) no-repeat;
   background-size: cover;
   z-index: -1;
+} */
+section.services {
+  position: relative;
+  background: url(../images/services/image.png) no-repeat;
+  background-size: cover;
+  background-position: right;
+  z-index: 0; /* Ensure the background stays below overlays */
 }
+
+section.services:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 2; /* Ensure it is above the background */
+}
+
+section.services:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #38DCE2B2;
+  opacity: 0.5;
+  z-index: 3; 
+}
+
 section.services .service-heading .title {
-  font-size: 60px;
-  font-weight: 700;
-  color: #e2ffff;
-  text-transform: uppercase;
-  margin-bottom: 10px;
+  color: #fff;
   font-family: "trueno";
   text-align: center;
+  position: relative;
+  z-index: 4; 
+}
+
+.services-slider {
+  z-index: 5 !important; 
 }
 
 .services-item .services-header {
@@ -794,9 +887,7 @@ section.WhyChooseUs {
 }
 
 section.WhyChooseUs .WhyChooseUs-details .title {
-  font-size: 60px;
-  font-weight: 700;
-  color: #000;
+ 
   text-transform: uppercase;
   margin-bottom: 20px;
   font-family: "Trueno", sans-serif;
@@ -1017,11 +1108,9 @@ section.testimonials {
 }
 
 section.testimonials .title {
-  font-size: 60px;
-  font-weight: 700;
-  color: #000;
+ 
   text-transform: uppercase;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   font-family: "trueno";
 }
 
